# poc_cicd

./: .gitignore  AUTHORS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
infra/: app.py  requirements.txt  settings.py
infra/infra/: infra_glue.py  infra_stack.py
poc/: __init__.py  cli.py
poc/gluescripts/: glue_poc_pipeline.py
tests/: test_poc.py
