[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poc"
repository = "https://github.com/baotran/poc"
version = "0.1.0"
description = "Awesome Python code."
authors = ["Bao Tran <tranthanhbao2207@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["poc"]

[[tool.poetry.source]]
name = "default_pypi"
url = "https://pypi.python.org/simple"
secondary = false

[tool.poetry.dependencies]
python = "^3.9.2"
aws-cdk-lib = "2.41.0"
constructs = "^10.0.0"  # ,<11.0.0
exceptiongroup = "^1.0.0-rc.9"
wheel = "0.37.1"
"aws-cdk.aws-glue-alpha" = "^2.41.0-alpha.0"
[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
# cookiecutter = "^1.7.2"
tox = "^3.23.0"
bump2version = "^1.0.1"
flake8 = "^3.9.1"
pip = "22.1.2"
coverage = {extras = ["toml"], version = "^5.5"}
click = "8.1.3"
isort = "^5.10.1"
black = "^22.8.0"


[tool.poetry.scripts]
poc = "poc.cli:main"
